# codewars

./: .gitmodules  CMakeLists.txt  README.md  common.h  compile-time-number-1-factorial.cpp  compile-time-number-2-ackermann-function.cpp  compile-time-number-3-dot-1-make-string.cpp  compile-time-number-3-itoa-number-to-string.cpp
